--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.10",
     "date-fns": "^2.29.2",
     "framer-motion": "^6.5.1",
+    "link-preview-js": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
